--- a/.vitepress/theme/index.css
+++ b/.vitepress/theme/index.css
@@ -1,8 +1,15 @@
 :root {
   --vp-home-hero-name-color: transparent;
-  --vp-home-hero-name-background: -webkit-linear-gradient(
+  --vp-home-hero-name-background: linear-gradient(
     120deg,
     #bd34fe,
     #41d1ff
   );
+
+  --vp-home-hero-image-background-image: linear-gradient(
+    120deg,
+    #bd34fe,
+    #41d1ff
+  );
+  --vp-home-hero-image-fliter: blur(150px);
 }
