--- a/.vitepress/theme/styles/vars.less
+++ b/.vitepress/theme/styles/vars.less
@@ -16,6 +16,8 @@
   // --vp-sidebar-width: 200px;
 }
 
+@primary-color: #1890ff;
+
 /**
    * Component: Button
    * -------------------------------------------------------------------------- */
