style(custom): 移除默认中文字体，提升加载速度

--- a/.vitepress/theme/styles/vars.less
+++ b/.vitepress/theme/styles/vars.less
@@ -58,7 +58,7 @@
   --docsearch-primary-color: var(--vp-c-brand) !important;
 }
 
-@font-family: AlibabaPuHuiTi, -apple-system, BlinkMacSystemFont, "Segoe UI",
+@font-family:  "HarmonyOS Sans", AlibabaPuHuiTi, -apple-system, BlinkMacSystemFont, "Segoe UI",
   Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
   "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 @code-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier,
@@ -66,7 +66,7 @@
 
 @main-color: #506bee;
 @error-header-font-size: 32px;
-@app-font-family: AlibabaPuHuiTi, HYCuJianHeiJ, PingFangSC, HYZhongJianHeiJ,
+@app-font-family: "HarmonyOS Sans", AlibabaPuHuiTi, HYCuJianHeiJ, PingFangSC, HYZhongJianHeiJ,
   Georgia, Avenir, Helvetica, Arial, sans-serif;
 @app-font-weight: 400;
 @app-font-size-adjust: 0.5;
