refactor(custom): 优化性能

--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -1,7 +1,7 @@
-.custom-page-class {
+/* .custom-page-class {
   background-color: red;
 }
 
 .blog-index-page {
   background-color: var(--clr);
-}
+} */
