fix(custom): 修复打包

--- a/.vitepress/theme/styles/index.less
+++ b/.vitepress/theme/styles/index.less
@@ -83,6 +83,11 @@ body {
   background-color: var(--clr);
 }
 
+// .blog-page {
+//   // img {
+//   //   clip-path: url(#customClipPath);
+//   // }
+// }
 
 .medium-zoom-overlay {
   z-index: 9;
@@ -91,7 +96,6 @@ body {
 .medium-zoom-image {
   z-index: 10;
 }
-
 
 // .medium-zoom-overlay,
 // .medium-zoom-image--opened {
