chore(custom): 优化页面结构

--- a/.vitepress/theme/styles/index.less
+++ b/.vitepress/theme/styles/index.less
@@ -130,7 +130,8 @@ body {
 }
 
 .blog-index-page {
-  background-color: var(--clr);
+  // background-color: var(--clr);
+  background-color: inherit;
 }
 
 // .blog-page {
