style(custom): 优化导航栏样式

--- a/.vitepress/theme/styles/index.less
+++ b/.vitepress/theme/styles/index.less
@@ -190,6 +190,10 @@ body {
   background-color: #f5f5f6;
 }
 
+.VPNavBar {
+  background-color: var(--vp-nav-bg-color);
+}
+
 mjx-container {
   display: inline-block;
   margin: auto 2px -2px;
