--- a/.vitepress/theme/styles/index.less
+++ b/.vitepress/theme/styles/index.less
@@ -141,7 +141,21 @@ body {
 // }
 
 .medium-zoom-overlay {
+  filter: blur(3px);
+  opacity: 0.9 !important;
   z-index: 9;
+}
+
+.medium-zoom-overlay::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(10px);
+  opacity: 0.8;
 }
 
 .medium-zoom-image {
@@ -151,6 +165,18 @@ body {
 .medium-zoom-overlay,
 .medium-zoom-image--opened {
   z-index: 999;
+}
+
+.medium-zoom--opened {
+  padding: 1em;
+}
+
+.medium-zoom-image--opened {
+  border-radius: 0.3em;
+  box-shadow: 0 0 0 1px hsla(0, 0%, 100%, 0.3) inset,
+    0 0.5em 1em rgba(0, 0, 0, 0.6);
+  text-shadow: 0 1px 1px hsla(0, 0%, 100%, 0.3);
+  // background: hsla(0, 0%, 100%, 0.3);
 }
 
 .DocSearch-Button {
