--- a/.vitepress/theme/styles/index.less
+++ b/.vitepress/theme/styles/index.less
@@ -17,7 +17,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-weight: @app-font-weight;
   font-size-adjust: @app-font-size-adjust;
-  font-display: optional;
+  font-display: swap;
 }
 
 #app {
@@ -27,7 +27,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-weight: @app-font-weight;
   font-size-adjust: @app-font-size-adjust;
-  font-display: optional;
+  font-display: swap;
 
   :deep(*) {
     font-family: @app-font-family;
