feat(custom): 优化整体功能及样式

--- a/.vitepress/theme/styles/index.less
+++ b/.vitepress/theme/styles/index.less
@@ -264,3 +264,7 @@ html[data-theme="dark"] {
 .VPLocalNav.reached-top {
   border-bottom: none;
 }
+
+.VPSocialLinks.VPNavBarSocialLinks.social-links {
+  margin-right: 0;
+}
