--- a/.vitepress/theme/styles/index.less
+++ b/.vitepress/theme/styles/index.less
@@ -268,3 +268,87 @@ html[data-theme="dark"] {
 .VPSocialLinks.VPNavBarSocialLinks.social-links {
   margin-right: 0;
 }
+
+.blog-page-class {
+  [data-animate] {
+    --stagger: 0;
+    --delay: 120ms;
+    --start: 0ms;
+  }
+
+  @media (prefers-reduced-motion: no-preference) {
+    [data-animate] {
+      animation: enter 0.6s both;
+      animation-delay: calc(var(--stagger) * var(--delay) + var(--start));
+    }
+  }
+
+  .vp-doc > * {
+    --stagger: 0;
+    --delay: 150ms;
+    --start: 0ms;
+    animation: slide-enter 1s both 1;
+    animation-delay: calc(var(--start) + var(--stagger) * var(--delay));
+  }
+
+  .vp-doc > *:nth-child(1) {
+    --stagger: 1;
+  }
+  .vp-doc > *:nth-child(2) {
+    --stagger: 2;
+  }
+  .vp-doc > *:nth-child(3) {
+    --stagger: 3;
+  }
+  .VPDoc .content-container > *:nth-child(4) {
+    --stagger: 4;
+  }
+  .VPDoc .content-container > *:nth-child(5) {
+    --stagger: 5;
+  }
+  .VPDoc .content-container > *:nth-child(6) {
+    --stagger: 6;
+  }
+  .VPDoc .content-container > *:nth-child(7) {
+    --stagger: 7;
+  }
+  .VPDoc .content-container > *:nth-child(8) {
+    --stagger: 8;
+  }
+  .VPDoc .content-container > *:nth-child(9) {
+    --stagger: 9;
+  }
+  .VPDoc .content-container > *:nth-child(10) {
+    --stagger: 10;
+  }
+  .VPDoc .content-container > *:nth-child(11) {
+    --stagger: 11;
+  }
+  .VPDoc .content-container > *:nth-child(12) {
+    --stagger: 12;
+  }
+  .VPDoc .content-container > *:nth-child(13) {
+    --stagger: 13;
+  }
+  .VPDoc .content-container > *:nth-child(14) {
+    --stagger: 14;
+  }
+  .VPDoc .content-container > *:nth-child(15) {
+    --stagger: 15;
+  }
+  .VPDoc .content-container > *:nth-child(16) {
+    --stagger: 16;
+  }
+  .VPDoc .content-container > *:nth-child(17) {
+    --stagger: 17;
+  }
+  .VPDoc .content-container > *:nth-child(18) {
+    --stagger: 18;
+  }
+  .VPDoc .content-container > *:nth-child(19) {
+    --stagger: 19;
+  }
+  .VPDoc .content-container > *:nth-child(20) {
+    --stagger: 20;
+  }
+}
