style(custom): 优化整体样式

--- a/.vitepress/theme/styles/index.less
+++ b/.vitepress/theme/styles/index.less
@@ -249,6 +249,7 @@ html[data-theme="dark"] {
 }
 
 .VPNav::after,
+.VPLocalNav::after,
 .VPLocalNav.reached-top::after {
   position: absolute;
   content: "";
