feat(custom): 优化整体布局和样式

--- a/.vitepress/theme/styles/index.less
+++ b/.vitepress/theme/styles/index.less
@@ -1,6 +1,7 @@
 @import "./fonts/index.less";
 @import "./vars.less";
 @import "./global.less";
+@import "./vp-code-group.less";
 
 :root {
   --vp-font-family-base: @app-font-family;
