--- a/.vitepress/theme/styles/vars.less
+++ b/.vitepress/theme/styles/vars.less
@@ -76,7 +76,7 @@
 @dashboard-font-family: AlibabaPuHuiTi, JetBrainsMono, HYCuJianHeiJ;
 
 h1 {
-  background: -webkit-linear-gradient(-45deg, #e43498 5%, #5ad7dd 15%);
+  background: -webkit-linear-gradient(-45deg, #506bee 5%, #5ad7dd 15%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -108,9 +108,9 @@ h1 {
 .vp-doc blockquote {
   border-radius: 5px;
   padding: 10px 16px;
-  background-color: var(--vp-badge-danger-bg);
+  background-color: var(--vp-c-brand-lightest);
   position: relative;
-  border-left: 4px solid #e95f59;
+  border-left: 4px solid var(--vp-c-brand);
 }
 
 .vp-doc a[href^="https://www.youtube.com/"]:before,[href^="https://www.bilibili.com/"]:before
@@ -180,7 +180,7 @@ h1 {
 
 /* 代码块tab */
 .vp-code-group .tabs {
-  padding-top: 30px;
+  padding-top: 10px;
 }
 
 /* 代码块tab-顶部小圆点 */
@@ -200,5 +200,5 @@ h1 {
 .vp-code-group {
   color: var(--vp-c-black-soft);
   border-radius: 8px;
-  box-shadow: 0 10px 30px 0 rgb(0 0 0 / 40%);
+  box-shadow: 0 5px 15px 0 rgb(0 0 0 / 40%);
 }
