feat(custom): 功能优化

--- a/.vitepress/theme/styles/index.less
+++ b/.vitepress/theme/styles/index.less
@@ -393,3 +393,42 @@ html[data-theme="dark"] {
   transform: translate(0, 0);
   opacity: 1;
 }
+
+/*markdown*/
+// .vp-doc h1,
+// .vp-doc h2,
+// .vp-doc h3,
+// .vp-doc h4,
+// .vp-doc h5,
+// .vp-doc h6 {
+//   line-height: 1.5;
+//   margin-top: 15px;
+//   margin-bottom: 10px;
+//   padding-bottom: 5px;
+// }
+
+// .vp-doc h2 {
+//   display: inline-block;
+//   font-weight: 700;
+//   background: var(--c-brand);
+//   color: #fff;
+//   padding: 6px 8px 0 0;
+//   border-top-right-radius: 6px;
+//   margin-right: 2px;
+//   box-shadow: 6px 3px 0 0 var(--c-brand-light);
+// }
+
+// .vp-doc h2::before {
+//   content: " ";
+//   display: inline-block;
+//   width: 8px;
+// }
+
+// .vp-doc h2::after {
+//   content: " ";
+//   position: absolute;
+//   display: block;
+//   width: calc(100% - 50px);
+//   border-bottom: 3px solid var(--c-brand);
+// }
+/*markdown*/
