feat(custom): 增加mermaid全屏显示和下载

--- a/.vitepress/theme/styles/index.less
+++ b/.vitepress/theme/styles/index.less
@@ -432,3 +432,21 @@ html[data-theme="dark"] {
 //   border-bottom: 3px solid var(--c-brand);
 // }
 /*markdown*/
+
+:fullscreen, ::backdrop {
+  background-color: var(--vp-c-bg);
+}
+
+:-webkit-full-screen {
+  background-color: var(--vp-c-bg);
+}
+:-moz-full-screen {
+  background-color: var(--vp-c-bg);
+}
+
+:-ms-fullscreen {
+  background-color: var(--vp-c-bg);
+}
+:fullscreen {
+  background-color: var(--vp-c-bg);
+}
