--- a/.vitepress/theme/styles/index.less
+++ b/.vitepress/theme/styles/index.less
@@ -154,7 +154,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: var(--vp-c-bg-alt);
   backdrop-filter: blur(10px);
   opacity: 0.8;
 }
@@ -214,7 +214,7 @@ body {
   }
 }
 .DocSearch-Button:hover {
-  background-color: #f5f5f6;
+  background-color: var(--vp-c-bg-alt);
 }
 
 .VPNavBar {
@@ -449,4 +449,10 @@ html[data-theme="dark"] {
 }
 :fullscreen {
   background-color: var(--vp-c-bg);
+}
+
+.mermaid-graph {
+  background-image: url("/images/mermaid-background.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
