feat(custom): 优化图片预览功能

--- a/.vitepress/theme/styles/index.less
+++ b/.vitepress/theme/styles/index.less
@@ -142,6 +142,7 @@ body {
 // }
 
 .medium-zoom-overlay {
+  backdrop-filter: blur(5rem);
   filter: blur(3px);
   opacity: 0.9 !important;
   z-index: 9;
