--- a/.vitepress/theme/styles/vp-code-group.less
+++ b/.vitepress/theme/styles/vp-code-group.less
@@ -2,7 +2,12 @@
 
 /* 代码块tab */
 .vp-code-group .tabs {
+  margin: 0;
   padding-top: 30px;
+}
+
+.vp-doc div[class*='language-'], .vp-block {
+  margin: 0;
 }
 
 /* 代码块tab-顶部小圆点 */
