:lipstick: style: 优化

--- a/.vitepress/theme/styles/index.less
+++ b/.vitepress/theme/styles/index.less
@@ -1,5 +1,6 @@
 @import "./fonts/index.less";
 @import "./vars.less";
+@import "./blur.less";
 @import "./global.less";
 @import "./vp-code-group.less";
 
