:bug: fix: 修复了一些问题

--- a/.vitepress/theme/styles/global.less
+++ b/.vitepress/theme/styles/global.less
@@ -167,6 +167,10 @@ svg {
   background: var(--vp-c-brand-lightest);
 }
 
+// .VPFeature:hover .VPImage {
+//   transform: perspective(500px) translate3d(0, -25px, 50px);
+// }
+
 .VPHomeFeatures .VPFeature{
   h2.title{
     background-image: linear-gradient(45deg, #ffb3ba, #c49c6e, #bfbf76, #77b084, #ff7e74, #3b82f6, #c084fc, #db2777);
