:lipstick: style: 优化mermaid字体

--- a/.vitepress/theme/styles/index.less
+++ b/.vitepress/theme/styles/index.less
@@ -467,3 +467,11 @@ html[data-theme="dark"] {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+:root{
+  --vp-code-copy-copied-text-content: "Copied"
+}
+
+:lang(zh-CN){
+  --vp-code-copy-copied-text-content: "已复制"
+}
