:sparkles: feat: 恢复threejs功能

--- a/.vitepress/theme/styles/index.less
+++ b/.vitepress/theme/styles/index.less
@@ -7,6 +7,7 @@
 :root {
   --vp-font-family-base: @app-font-family;
   --vp-font-family-mono: @app-font-family;
+  --vp-header-anchor-symbol: '🔗';
 }
 
 html,
