:sparkles: feat: 功能优化

--- a/.vitepress/theme/styles/index.less
+++ b/.vitepress/theme/styles/index.less
@@ -279,6 +279,12 @@ html[data-theme="dark"] {
   border-bottom: none;
 }
 
+.VPNavBarTitle .title span{
+  margin: 0;
+  -webkit-text-stroke: 3px #9747FF;
+  paint-order: stroke;
+}
+
 .VPSocialLinks.VPNavBarSocialLinks.social-links {
   margin-right: 0;
 }
