:sparkles: feat: 优化markup-map的深色模式显示

--- a/.vitepress/theme/styles/global.less
+++ b/.vitepress/theme/styles/global.less
@@ -63,6 +63,19 @@ html,body{
   --vp-custom-block-tip-border: var(--vp-c-brand);
   --vp-custom-block-tip-text: var(--vp-c-brand-lightest);
   --vp-custom-block-tip-bg: var(--vp-c-brand-dimm);
+
+  .mm-toolbar {
+    --un-border-opacity: 1;
+    border-color: rgb(82 82 91 / var(--un-border-opacity));
+    --un-bg-opacity: 1;
+    background-color: rgb(39 39 42 / var(--un-bg-opacity));
+    --un-text-opacity: 1;
+    color: rgb(161 161 170 / var(--un-text-opacity));
+  }
+
+  .markmap-foreign > div {
+    color: var(--vp-c-text-1);
+  }
 }
 
 /**
