--- a/.vitepress/theme/styles/index.less
+++ b/.vitepress/theme/styles/index.less
@@ -3,6 +3,7 @@
 @import "./blur.less";
 @import "./global.less";
 @import "./vp-code-group.less";
+@import "./ext.less";
 
 :root {
   --vp-font-family-base: @app-font-family;
