:sparkles: feat: 功能优化

--- a/.vitepress/theme/styles/ext.less
+++ b/.vitepress/theme/styles/ext.less
@@ -8,6 +8,11 @@
   font-weight: bolder;
   position: relative;
   text-align: center;
+  margin-bottom: 20px;
+}
+
+.vp-doc p {
+  margin-bottom: 10px;
 }
 
 .vp-doc h2::before {
