--- a/.vitepress/theme/styles/index.less
+++ b/.vitepress/theme/styles/index.less
@@ -22,6 +22,7 @@ body {
   font-weight: @app-font-weight;
   font-size-adjust: @app-font-size-adjust;
   font-display: swap;
+  overscroll-behavior: none; /* 禁用弹性滚动效果 */
 }
 
 #app {
