:sparkles: feat: 功能优化

--- a/.vitepress/theme/styles/global.less
+++ b/.vitepress/theme/styles/global.less
@@ -188,6 +188,11 @@ svg {
   perspective: 1000px;
   transform-style: preserve-3d;
 
+  background: radial-gradient(65.28% 65.28% at 50% 100%,
+                    rgba(223, 113, 255, 0.8) 0%,
+                    rgba(223, 113, 255, 0) 100%),
+                linear-gradient(0deg, #7a5af8, #7a5af8);
+
   h2.title{
     background-image: linear-gradient(45deg, #ffb3ba, #c49c6e, #bfbf76, #77b084, #ff7e74, #3b82f6, #c084fc, #db2777);
     color: transparent;
