:sparkles: feat: 功能优化

--- a/.vitepress/theme/styles/index.less
+++ b/.vitepress/theme/styles/index.less
@@ -302,7 +302,7 @@ html[data-theme="dark"] {
   margin-right: 0;
 }
 
-.gallery-page-class, .blog-page-class {
+.gallery-page-class, .blog-page-class, .manual-page-class {
 
   [data-animate] {
     --stagger: 0;
@@ -414,6 +414,10 @@ html[data-theme="dark"] {
   strong {
     font-weight: 700;
   }
+}
+
+.manual-page-class {
+  width: 100vw;
 }
 
 .text-emphasis-fire {
