--- a/.vitepress/theme/styles/vars.less
+++ b/.vitepress/theme/styles/vars.less
@@ -2,6 +2,26 @@
  * Colors
  * -------------------------------------------------------------------------- */
 
+@app-font-family: PingFangSC, AlibabaPuHuiTi, JetBrainsMono, "HarmonyOS Sans",
+  -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
+  "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+  "Segoe UI Symbol", "Noto Color Emoji";
+@mermaid-font-family: PingFangSC, AlibabaPuHuiTi, JetBrainsMono, "HarmonyOS Sans",
+  -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
+  "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+  "Segoe UI Symbol", "Noto Color Emoji";
+@code-family: JetBrainsMono, "SFMono-Regular", Consolas, "Liberation Mono",
+  Menlo, Courier, monospace;
+@main-color: #506bee;
+@error-header-font-size: 32px;
+@app-font-family2: PingFangSC, AlibabaPuHuiTi, JetBrainsMono, "HarmonyOS Sans",
+  Georgia, Avenir, Helvetica, Arial, sans-serif;
+@app-font-weight: 400;
+@app-font-size-adjust: 0.5;
+@app-font-size: 16px;
+@admin-layout-header-height: 46px;
+@dashboard-font-family: AlibabaPuHuiTi, JetBrainsMono;
+
 :root {
   --vp-c-brand: #646cff;
   --vp-c-brand-light: #747bff;
@@ -14,6 +34,7 @@
   --c-brand-light: #747bff;
   --vp-nav-bg-color: rgba(240, 242, 245, 1);
   // --vp-sidebar-width: 200px;
+  --mermaid-font-family: PingFangSC, AlibabaPuHuiTi, JetBrainsMono, "HarmonyOS Sans";
 }
 
 @primary-color: #1890ff;
@@ -57,22 +78,6 @@
 .DocSearch {
   --docsearch-primary-color: var(--vp-c-brand) !important;
 }
-
-@app-font-family: PingFangSC, AlibabaPuHuiTi, JetBrainsMono, "HarmonyOS Sans",
-  -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
-  "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-  "Segoe UI Symbol", "Noto Color Emoji";
-@code-family: JetBrainsMono, "SFMono-Regular", Consolas, "Liberation Mono",
-  Menlo, Courier, monospace;
-@main-color: #506bee;
-@error-header-font-size: 32px;
-@app-font-family2: PingFangSC, AlibabaPuHuiTi, JetBrainsMono, "HarmonyOS Sans",
-  Georgia, Avenir, Helvetica, Arial, sans-serif;
-@app-font-weight: 400;
-@app-font-size-adjust: 0.5;
-@app-font-size: 16px;
-@admin-layout-header-height: 46px;
-@dashboard-font-family: AlibabaPuHuiTi, JetBrainsMono;
 
 h1 {
   // background: -webkit-linear-gradient(-45deg, #506bee 5%, #5ad7dd 35%);
