:lipstick: style: 优化手册页面样式

--- a/.vitepress/theme/styles/index.less
+++ b/.vitepress/theme/styles/index.less
@@ -302,7 +302,7 @@ html[data-theme="dark"] {
   margin-right: 0;
 }
 
-.gallery-page-class, .blog-page-class, .manual-page-class {
+.gallery-page-class, .blog-page-class, .manual-page-class, .manuals-page-class {
 
   [data-animate] {
     --stagger: 0;
@@ -418,6 +418,13 @@ html[data-theme="dark"] {
 
 .manual-page-class {
   width: 100vw;
+}
+
+.manuals-page-class {
+  // background: #9747ff;
+  .VPHomeFeatures {
+    margin-top: 30px;
+  }
 }
 
 .text-emphasis-fire {
