:sparkles: feat: 功能优化

--- a/.vitepress/theme/styles/mermaid.less
+++ b/.vitepress/theme/styles/mermaid.less
@@ -1,4 +1,5 @@
-.zenuml, .styled-mermaid {
-  font-family: JetBrainsMapleMono !important;
+.zenuml,
+.styled-mermaid {
+  font-family: LikeJianJianTi, "PING FANG CHANG AN", JetBrainsMapleMono !important;
   font-size: 14px !important;
 }
